[Praveen|Matheas] Fix graph color contrast ratio

--- a/src/stylesheets/_quadrants.scss
+++ b/src/stylesheets/_quadrants.scss
@@ -201,22 +201,22 @@
       rect,
       path {
         &.first {
-          fill: $sapphire;
+          fill: $sapphire-dark;
           stroke: none;
         }
 
         &.second {
-          fill: $turmeric;
+          fill: $turmeric-dark;
           stroke: none;
         }
 
         &.third {
-          fill: $jade;
+          fill: $jade-dark;
           stroke: none;
         }
 
         &.fourth {
-          fill: $flamingo;
+          fill: $flamingo-dark;
           stroke: none;
         }
       }
