--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -42,3 +42,8 @@ $button-disabled: #909090; //disabled state for links and buttons
 $link-normal: $black; //links color
 $link-hover: #9b293c; //links hover state color
 $error-text: #d14234;
+
+$flamingo-dark: #9b293c; //flamingo-dark
+$sapphire-dark: #1f8290; //$sapphire-dark
+$jade-dark: #517b5c; //jade-dark
+$turmeric-dark: #a06908; //turmeric-dark
